Form field border color contrast https://github.com/proudcity/wp-proudcity/issues/1902 and  Form field color contrast #1901  https://github.com/proudcity/wp-proudcity/issues/1901

--- a/app/pattern-scss/_local-variables.scss
+++ b/app/pattern-scss/_local-variables.scss
@@ -327,7 +327,7 @@ $input-bg-disabled:              $gray-lighter !default;
 //** Text color for `<input>`s
 $input-color:                    $gray !default;
 //** `<input>` border color
-$input-border:                   #ccc !default;
+$input-border:                   #949494 !default;
 
 // TODO: Rename `$input-border-radius` to `$input-border-radius-base` in v4
 //** Default `.form-control` border radius
@@ -341,7 +341,7 @@ $input-border-radius-small:      $border-radius-small !default;
 $input-border-focus:             #66afe9 !default;
 
 //** Placeholder text color
-$input-color-placeholder:        #999 !default;
+$input-color-placeholder:        #888 !default;
 
 //** Default `.form-control` height
 $input-height-base:              ($line-height-computed + ($padding-base-vertical * 2) + 4) !default;
